fix the layout issue of arb

--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,3 @@
 [dir="rtl"] table {
   text-align: right;
 }
-
-[dir="rtl"] .text-right {
-  text-align: left;
-}
